Add instruction to test the role. No echo messqge is displayed

--- a/play.yml
+++ b/play.yml
@@ -8,5 +8,5 @@
     kind:
       cluster_name: my-k8s
       version: "1.17"
-  # - include_role:
-  #     name: "kind"
+  - include_role:
+      name: "kind"
