--- a/molecule/resources/cleanup.yml
+++ b/molecule/resources/cleanup.yml
@@ -1,6 +1,7 @@
 ---
 - name: Cleanup
   hosts: all
+  gather_facts: false
   tasks:
   - name: "Clean up the machine"
-    shell: echo "Clean up the machine"
+    shell: echo 'Clean up the machine'
