Develop the role to instqll the kind tool

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,7 +2,7 @@
 dependency:
   name: galaxy
   options:
-    requirement-files: ../resources/collections.yml
+    requirements-file: ../resources/collections.yml
 driver:
   name: docker
 platforms:
