--- a/play.yml
+++ b/play.yml
@@ -4,9 +4,9 @@
   collections:
   - snowdrop.kubernetes
   tasks:
+  #- include_role:
+  #    name: "kind"
   - name: Create a K8s cluster
     kind:
       cluster_name: my-k8s
       version: "1.17"
-  - include_role:
-      name: "kind"
