--- a/roles/kind/tasks/main.yml
+++ b/roles/kind/tasks/main.yml
@@ -1,3 +1,11 @@
-- shell: echo 'Hello World'
-  register: msg
-- debug: "{{ msg.stdout }}"
+- name: Check if kind binary exists
+  stat:
+    path: "{{ kind_client_path }}"
+  register: kind_client
+
+- name: Get the client assets from github
+  include_tasks: github_assets.yml
+
+- name: Install the kind binary client
+  include_tasks: install_kind_client.yml
+  when: not kind_client.stat.exists or kind_force_client_install
