--- a/roles/kind/defaults/main.yml
+++ b/roles/kind/defaults/main.yml
@@ -6,9 +6,11 @@ kind_os_matrix:
   brew:
     - MacOSX
 
+# Using github api
 kind_client_path: /usr/local/bin/kind
-kind_force_client_install: false
 kind_client_dest: /usr/local/bin
+kind_force_client_install: false
+
 kind_prefix_mac: kind-darwin
 kind_prefix_linux: kind-linux
 
@@ -16,3 +18,9 @@ github_api: https://api.github.com/repos
 github_owner: kubernetes-sigs
 github_repo: kind
 github_tag: v0.8.1
+
+# Using get_url
+kind_version: v0.8.1
+kind_archive_name: "{{ kind_version }}/kind-{{ ansible_system | lower }}-amd64"
+kind_binary_directory: /usr/local/bin
+kind_binary: "{{ kind_binary_directory}}/kind"
