--- a/roles/kind/tasks/main.yml
+++ b/roles/kind/tasks/main.yml
@@ -3,12 +3,33 @@
     path: "{{ kind_binary }}"
   register: kind_binary_present
 
+# - name: Download 'kind' binary from github release & install it if missing from /usr/local/bin directory
+#   get_url:
+#     url: "https://github.com/kubernetes-sigs/kind/releases/download/{{ kind_archive_name }}"
+#     dest: "{{ kind_binary }}"
+#     mode: '0755'
+#     force: "{{ kind_force_client_install | bool }}"
+#   when: not kind_binary_present.stat.exists or kind_force_client_install | bool == true
+
+- name: Populate the github uri
+  uri:
+    url: https://api.github.com/repos/{{ github_owner }}/{{ github_repo }}/releases/latest
+    return_content: yes
+  register: releases
+
 - name: Download 'kind' binary from github release & install it if missing from /usr/local/bin directory
   get_url:
-    url: "https://github.com/kubernetes-sigs/kind/releases/download/{{ kind_archive_name }}"
+    url: https://api.github.com/repos/{{ github_owner }}/{{ github_repo }}/releases/assets/{{ id }}
+    headers:
+      Accept: application/octet-stream
     dest: "{{ kind_binary }}"
-    mode: '0755'
-  when: not kind_binary_present.stat.exists
+    mode: "{{ asset_mode }}"
+    force: "{{ kind_force_client_install | bool }}"
+  when: not kind_binary_present.stat.exists or kind_force_client_install | bool == true
+  vars:
+    release_data: "{{ releases.json|to_json }}"
+    arch: "{{ ansible_system|lower }}-{{ arch_map[ansible_userspace_architecture] }}"
+    id: "{{ release_data|from_json|json_query('assets[?ends_with(@.name, `' ~ arch ~ '`)] | [0].id') }}"
 
 
 #- name: Check if kind binary exists
