--- a/roles/kind/vars/main.yml
+++ b/roles/kind/vars/main.yml
@@ -1,2 +1,7 @@
 ---
 # vars file for kind
+
+# Map GitHub release architectures to Ansible userspace architectures
+arch_map:
+  i386: i386
+  x86_64: amd64
