--- a/roles/kind/tasks/main.yml
+++ b/roles/kind/tasks/main.yml
@@ -15,12 +15,14 @@
 
 - name: Show the URL and get the tagged release
   block:
-  - debug: msg="Accessing the tagged release at {{ github_api }}/{{ github_owner }}/{{ github_repo }}/releases/tags/{{ github_tag }}"
-  - uri:
-      url: "{{ github_api }}/{{ github_owner }}/{{ github_repo }}/releases/tags/{{ github_tag }}"
-      return_content: yes
-    register: assets
+    - debug: msg="Accessing the tagged release at {{ github_api }}/{{ github_owner }}/{{ github_repo }}/releases/tags/{{ github_tag }}"
+    - uri:
+        url: "{{ github_api }}/{{ github_owner }}/{{ github_repo }}/releases/tags/{{ github_tag }}"
+        return_content: yes
+      register: assets
   when: github_tag != ""
+
+- debug: msg="github var {{ github_tag }}, json content {{ assets }}"
 
 - name: Show the URL of the latest release and get it
   block:
@@ -31,7 +33,9 @@
       register: assets
   when: github_tag == ""
 
-- name: Download 'kind' binary from github release & install it if missing from /usr/local/bin directory
+- debug: msg="github var = {{ github_tag }}, json content = {{ assets }}"
+
+- name: Download 'kind' binary from github & install it if missing from /usr/local/bin directory
   get_url:
     url: https://api.github.com/repos/{{ github_owner }}/{{ github_repo }}/releases/assets/{{ id }}
     headers:
@@ -39,7 +43,7 @@
     dest: "{{ target_path }}/{{ kind_executable_name }}"
     mode: "{{ asset_mode }}"
     force: "{{ force }}"
-  when: not kind_binary_present.stat.exists or kind_force_client_install | bool == true
+  when: kind_force_client_install | bool == true or not kind_binary_present.stat.exists
   vars:
     release_data: "{{ assets.json|to_json }}"
     arch: "{{ ansible_system|lower }}-{{ arch_map[ansible_userspace_architecture] }}"
