--- a/roles/kind/tasks/main.yml
+++ b/roles/kind/tasks/main.yml
@@ -1,9 +1,9 @@
-- name: Set the value of the url and github_tag if a kind version is specified
+- name: Set the github url to use the tag passed as parameter
   set_fact:
     github_url: "{{ github_api }}/{{ github_owner }}/{{ github_repo }}/releases/tags/{{ kind_version }}"
   when: kind_version != ""
 
-- name: Set the value of the url to get the latest release
+- name: Set the github url to use the latest release
   set_fact:
     github_url: "{{ github_api }}/{{ github_owner }}/{{ github_repo }}/releases/latest"
   when: kind_version == ""
@@ -25,8 +25,6 @@
         url: "{{ github_url }}"
         return_content: yes
       register: github_response
-
-#- debug: msg="github content '{{ github_response }}'"
 
 - name: Download 'kind' binary from github & install it if missing from /usr/local/bin directory
   get_url:
